--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "react-native-screens": "~3.15.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.2.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "expo-font": "~10.2.0",
+    "expo-app-loading": "~2.1.0",
+    "expo-splash-screen": "~0.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
